--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,29 +1,30 @@
 on: push
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout repo
-              uses: actions/checkout@v4
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+        
+      - name: Build the index.html file
+        run: python build.py
 
-            - name: Build index.html file
-              run: python build.py
+      - name: Upload files to pages
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: out/
 
-            - name: Upload build files
-              uses: actions/upload-pages-artifact@v3
-              with:
-                path: out/
-
-    deploy:
-        runs-on: ubuntu/latest
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-        needs: build
-        permissions:
-            pages: write
-            id-token: write
-        steps:
-            - name: Deploy to Github pages
-              uses: actions/deploy-pages@v4
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      pages: write
+      id-token: write
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
