Update action.yml for a09 again

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -36,8 +36,6 @@ jobs:
         uses: actions/checkout@v4
         
       - name: Run TruffleHog Scan
-        uses: trufflesecurity/trufflehog-action@v1
+        uses: docker://trufflesecurity/trufflehog:latest
         with:
-          # Optional: Set to true if you want to see full results.
-          severity: "high"  # You can choose severity levels: "low", "medium", "high".
-
+          args: --json --regex --entropy=True .
