--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -29,3 +29,19 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
 
+  setup-node:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16' 
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run build (if you have a Node.js build process)
+        run: npm run build  
