--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -7,6 +7,24 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
         
+      - name: Cache Node.js modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.npm
+            node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
+      - name: Install dependencies
+        run: npm install
+
       - name: Build the index.html file
         run: python build.py
 
@@ -28,20 +46,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
-  setup-node:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16' 
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run build (if you have a Node.js build process)
-        run: npm run build  
