--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -7,6 +7,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
         
+      # Cache dependencies (adjust paths based on your project)
       - name: Cache Node.js modules
         uses: actions/cache@v3
         with:
